<!--
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Janas Chatkevicius as part of the Nanodegree At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be your own work, hence
  ~ submitting this project as yours will cause you to break the Udacity Honor Code
  ~ and the suspension of your account.
  ~
  ~ Me, the author of the project, allow you to check the code as a reference, but if
  ~ you submit it, it's your own responsibility if you get expelled.
  ~
  ~ Copyright (c) 2018 Janas Chatkevicius
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">MusicalStructureApp</string>
    <string name="welcome_text_view_string">What is your mood today?</string>
    <string name="classical_text_view_string">Classical</string>
    <string name="jazz_text_view_string">Jazz</string>
    <string name="hiphop_text_view_string">Hip Hop</string>
    <string name="pop_text_view_string">Pop</string>
    <string name="blues_text_view_string">Blues</string>
    <string name="techno_text_view_string">Techno</string>
    <string name="reggae_text_view_string">Reggae</string>
    <string name="song_image">Song Image</string>
    <string name="rewind_arrow_image">Rewind Arrow Image</string>
    <string name="forward_arrow_image">Forward Arrow Image</string>
    <string name="play_arrow_image">Play Arrow Image</string>
    <string name="category_name">categoryName</string>
    <string name="category_value_jazz">Jazz</string>
    <string name="category_value_classical">Classical</string>
    <string name="category_value_hiphop">Hip Hop</string>
    <string name="category_value_pop">Pop</string>
    <string name="category_value_rock">Rock</string>
    <string name="category_value_blues">Blues</string>
    <string name="category_value_techno">Techno</string>
    <string name="category_value_reggae">Reggae</string>
    <string name="value_name">name</string>
    <string name="value_artist">artist</string>

</resources>
