<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Janas Chatkevicius as part of the Nanodegree At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be your own work, hence
  ~ submitting this project as yours will cause you to break the Udacity Honor Code
  ~ and the suspension of your account.
  ~
  ~ Me, the author of the project, allow you to check the code as a reference, but if
  ~ you submit it, it's your own responsibility if you get expelled.
  ~
  ~ Copyright (c) 2018 Janas Chatkevicius
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".NowPlayingActivity">

    <ImageView
        android:id="@+id/song_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/song_image"
        android:scaleType="fitCenter"
        android:src="@drawable/song_image"
        app:layout_constraintBottom_toTopOf="@id/now_playing_song_text_view"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/now_playing_song_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/now_playing_song_artist_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/song_image_view"
        tools:fontFamily="@font/montserrat"
        tools:text="Song Name" />

    <TextView
        android:id="@+id/now_playing_song_artist_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/play_arrow_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/now_playing_song_text_view"
        tools:fontFamily="@font/montserrat"
        tools:text="Artist Name" />

    <ImageView
        android:id="@+id/back_arrow_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/rewind_arrow_image"
        android:src="@drawable/ic_baseline_fast_rewind_48px"
        app:layout_constraintBottom_toTopOf="@id/volume_seekbar"
        app:layout_constraintEnd_toStartOf="@id/play_arrow_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/now_playing_song_artist_text_view" />

    <ImageView
        android:id="@+id/play_arrow_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/play_arrow_image"
        android:src="@drawable/ic_baseline_play_arrow_48px"
        app:layout_constraintBottom_toTopOf="@id/volume_seekbar"
        app:layout_constraintEnd_toStartOf="@id/forward_arrow_image_view"
        app:layout_constraintStart_toEndOf="@id/back_arrow_image_view"
        app:layout_constraintTop_toBottomOf="@id/now_playing_song_artist_text_view" />

    <ImageView
        android:id="@+id/forward_arrow_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:contentDescription="@string/forward_arrow_image"
        android:src="@drawable/ic_baseline_fast_forward_48px"
        app:layout_constraintBottom_toTopOf="@id/volume_seekbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/play_arrow_image_view"
        app:layout_constraintTop_toBottomOf="@id/now_playing_song_artist_text_view" />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/volume_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_arrow_image_view" />

</android.support.constraint.ConstraintLayout>

